--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <java.source.version>8</java.source.version>
+        <java.target.version>8</java.target.version>
+        <java.release.version>8</java.release.version>
+
         <gson.version>2.10.1</gson.version>
         <junit.version>4.13.2</junit.version>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
@@ -79,8 +83,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>${java.source.version}</source>
+                    <target>${java.target.version}</target>
+                    <release>${java.release.version}</release>
                     <fork>true</fork>
                 </configuration>
             </plugin>
