--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <java.target.version>8</java.target.version>
         <java.release.version>8</java.release.version>
 
+        <central-publishing-maven-plugin.version>0.9.0</central-publishing-maven-plugin.version>
         <gson.version>2.10.1</gson.version>
         <junit.version>4.13.2</junit.version>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
@@ -50,7 +51,6 @@
         <maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-        <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
         <nimbus-jose-jwt.version>9.47</nimbus-jose-jwt.version>
     </properties>
 
@@ -165,14 +165,13 @@
             </plugin>
 
             <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>${nexus-staging-maven-plugin.version}</version>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>${central-publishing-maven-plugin.version}</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <serverId>authlete</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                    <publishingServerId>authlete</publishingServerId>
+                    <autoPublish>true</autoPublish>
                 </configuration>
             </plugin>
         </plugins>
